# PyStand

./: .gitignore  CMakeLists.txt  LICENSE  PyStand.cpp  PyStand.h  PyStand.int  README.md  resource.rc
.github/workflows/: build.yml
source/: PyStand.cpp  PyStand.h  PyStand.rc
